@@ -1,3 +1,10 @@
+2005-02-10 00:08 Mike Park  <mike.park@nasa.gov>
+
+	* src/gridswap.c (gridRemoveTwoFaceCell) refactored the parallel
+	ghost node checks to make sure that faces will be present for
+	manipuations (add and delete) and cost validity checks. improved
+	error messages.
+
 2005-02-08 22:10 Mike Park  <mike.park@nasa.gov>
 
 	* src/gridswap.c (gridSwapEdge) added gridNodeGhost checks on edge
